--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,7 @@ local.properties
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
-
+/build/
+.project
 .classpath
 *.properties
