--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,5 +5,13 @@
 	  <welcome-file>encheres</welcome-file> 
   </welcome-file-list>
   
-
+  <!-- Les filtres -->
+  <filter>
+        <filter-name>NoCacheFilter</filter-name>
+        <filter-class>org.encheres.ihm.filter.NoCacheFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>NoCacheFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
